--- a/About.html
+++ b/About.html
@@ -40,11 +40,10 @@
 						<div class="inner">
 							<h1 class="major">关于</h1>
 							                               <!-- 文字-->
-							<p>Liuhouzhi0809‘s Blog<p>
+							<p> LiuHouzhi0809‘s Blog<p>
                                                        <p>I really appreciate the template provided by this website <li><a href="https://html5up.net/" class="button">html5up</a></li> <p>
-                                                      <p> ----LiHouzhi
                                                        <p> Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)<p>
-
+                                                        <p> LiuHouzhi0809的博客 <p>
                                                        <p> 感谢 html5up.net 提供的模版！<p>
                                                        <p> 根据CCA 3.0许可证，可免费用于个人和商业用途<p>
                                                        <p> 这是一个静态网站<p>
