--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML>
-<!--     莫生气                                （这是一个正在测试的网站）                                                 
+<!-- 2020.4.19 建立此网页
+
+
+           莫生气                                （这是一个正在测试的网站）                                                 
 人生就像一场戏，今世有缘才相聚。
 相处一处不容易，人人应该去珍惜。
 世上万物般般有，哪能件件如我意。
