--- a/Article-area.html
+++ b/Article-area.html
@@ -38,7 +38,11 @@
 							<h1 class="major">文章区</h1>
 							<p>自己的文章：<p>
 	                                                <li><a href="diary" class="button">日记</a></li>
+							<li><a href="a3" class="button">Mac移动硬盘不正确断开连接导致无法读取加载的解决方法</a></li>
 							<p>新闻：<p>
+							<p>4月28日</p>
+							
+							
 							<p>4月27日</p>
 							 <li><a href="a1" class="button">快装不下油了！全球原油储存空间将三个月内用尽</a></li>
 							<li><a href="a2" class="button">继续怒怼“假新闻”，特朗普称自己是史上最勤奋总统，简报会不值得</a></li>
