--- a/Article-area.html
+++ b/Article-area.html
@@ -39,6 +39,7 @@
 							<p>自己的文章：<p>
 	                                                <li><a href="diary" class="button">日记</a></li>
 							<li><a href="a3" class="button">Mac移动硬盘不正确断开连接导致无法读取加载的解决方法</a></li>
+							<li><a href="a4" class="button">如何在网页中嵌入网易云音乐播放器</a></li>
 							<p>新闻：<p>
 							<p>4月28日</p>
 							
