--- a/a6.html
+++ b/a6.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>疫情地图展示</title>
+  <title>COVID 19-中国地区地图</title>
   <style>
     .container {
       width: 1200px;
