--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
 
 			</div>   
                                                  -->
+	<!-- 雪花 -->					
+	<div data-widget-config=”e68a84e799bee5baa6e997aee7ad9431333335346138{‘duration’:0.1,’activeTriggerCls’:’.tshop-psm-shop-ww-hover’,'interval’:0.1,’effect’:'scrollx’,'activeIndex’:1,’navCls’:'user-crazyshej2′,’contentCls’:'user-crazysj1′,’autoplay’:true}” data-widget-type=”Carousel” style=”position:relative;”><ul style=”display:none;”><li style=”width:475px;height:800px;display:block;float:left;”> </li></ul><ul><li style=”width:475px;height:800px;right:50%;margin-right:485px;”><embed allowscriptaccess=”never” flashvars=”scene=taobao_shop” height=”1000〃 src=”http://img1.tbcdn.cn/tfscom/T1lmk2Fk8bXXXtxVjX.swf” type=”application/x-shockwave-flash” width=”475〃 wmode=”transparent”></embed></li></ul></div><div data-widget-config=”{‘duration’:0.1,’activeTriggerCls’:’.tshop-psm-shop-ww-hover’,'interval’:0.1,’effect’:'scrollx’,'activeIndex’:1,’navCls’:'user-crazyshej2′,’contentCls’:'user-crazysj1′,’autoplay’:true}” data-widget-type=”Carousel” style=”position:relative;z-index:10000000;”><ul style=”display:none;”><li style=”width:475px;height:800px;display:block;float:left;”> </li></ul><ul><li style=”width:475px;height:800px;left:50%;margin-left:485px;”><embed allowscriptaccess=”never” flashvars=”scene=taobao_shop” height=”1000〃 src=”http://img1.tbcdn.cn/tfscom/T1lmk2Fk8bXXXtxVjX.swf” type=”application/x-shockwave-flash” width=”475〃 wmode=”transparent”></embed></li></ul></div>					
 
 
 		<!-- Footer -->
