--- a/diary.html
+++ b/diary.html
@@ -70,6 +70,9 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+		
+		<!-- 外链播放器 -->
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=450 src="//music.163.com/outchain/player?type=0&id=4905754402&auto=1&height=430"></iframe>
 
 	</body>
 </html>
