--- a/diary.html
+++ b/diary.html
@@ -72,6 +72,7 @@
 			<script src="assets/js/main.js"></script>
 		
 		<!-- 外链播放器 -->
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=29732992&auto=1&height=66"></iframe>
 		
 
 	</body>
