--- a/m1.html
+++ b/m1.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>小型音乐播放器插件APlayer.js - 站长素材</title>
 
-<link rel="stylesheet" href="assets/APlayer.min.css">
-<link rel="stylesheet" type="text/css" href="assets/index.css">
+<link rel="stylesheet" href="APlayer.min.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 
 </head>
 <body>
@@ -34,7 +34,7 @@
 	</div>
 </div>
 
-<script src="assets/APlayer.min.js"></script>
+<script src="APlayer.min.js"></script>
 <script>
 	var ap3 = new APlayer({
 		element: document.getElementById('player3'),//样式1
