--- a/Random_music.htm
+++ b/Random_music.htm
@@ -2,8 +2,8 @@
 <!-- saved from url=(0073)https://jxiaoc.github.io/animeMusic/demo.html?id=5b8530e9b02de202d2f97b1a -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>demo</title>
-    <link rel="stylesheet" href="./demo_files/anime_music_icon.css">
-    <link rel="stylesheet" href="./demo_files/demo.css">
+    <link rel="stylesheet" href="./Random_music/anime_music_icon.css">
+    <link rel="stylesheet" href="./Random_music/demo.css">
 </head>
 <body>
 <div class="bg"><img src="./demo_files/01d698d73fd26c2b.jpg" class="show" style="transform: scale(1, 1);"></div>
@@ -20,7 +20,7 @@
     <div class="name">Callin' - 叛逆的鲁路修/叛逆的鲁鲁修/反</div>
 </div>
 
-<script type="text/javascript" src="./demo_files/anime-music.js"></script>
+<script type="text/javascript" src="./Random_music/anime-music.js"></script>
 <script>
     //为了方便查看, JS调用这一块的代码就不单独放一个js文件了
     function getQueryString(name, replace) {
