--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
+									<h2>音乐区</h2>
+									<p>随机播放二次元音乐</p>
+									<ul class="actions">
+										<li><a href="Random_music.htm" class="button">播放</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
 									<h2>资源区</h2>
 									<p>有很多资源可以下载（当然现在还没有）</p>
 									<ul class="actions">
