--- a/Random_music.htm
+++ b/Random_music.htm
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<!-- 本网页建立于2020.5.21-->
 <!-- saved from url=(0073)https://jxiaoc.github.io/animeMusic/demo.html?id=5b8530e9b02de202d2f97b1a -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>demo</title>
+    <title>随机播放二次元歌曲</title>
     <link rel="stylesheet" href="./Random_music/anime_music_icon.css">
     <link rel="stylesheet" href="./Random_music/demo.css">
 </head>
@@ -17,7 +18,7 @@
     <div class="progress">
         <div class="now"></div>
     </div>
-    <div class="name">Callin' - 叛逆的鲁路修/叛逆的鲁鲁修/反</div>
+    <div class="name">正在加载...</div>
 </div>
 
 <script type="text/javascript" src="./Random_music/anime-music.js"></script>
