--- a/Random_music.htm
+++ b/Random_music.htm
@@ -18,7 +18,7 @@
     <div class="progress">
         <div class="now"></div>
     </div>
-    <div class="name">正在加载...</div>
+    <div class="name"> ↑点击按钮开始播放</div>
 </div>
 
 <script type="text/javascript" src="./Random_music/anime-music.js"></script>
