--- a/a7.html
+++ b/a7.html
@@ -33,6 +33,7 @@
 			<div id="wrapper">
 
 				<!-- Main。-->
+				<audio src="/Whiteeeen-あの頃-ジンジンバオヂュオニー-.mp3"  autoplay="autoplay"> </audio> autoplay
 					
 							<img src="images/FBI-WARNING.jpg" width="1080" height="457">   <!-- 显示图片 -->
 							  
