--- a/hv2.html
+++ b/hv2.html
@@ -6,7 +6,7 @@
 		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
 		
-		<title>TBS放送 <!-- 浏览器标题 -->
+		<title>TBS放送 
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
