--- a/hv2.html
+++ b/hv2.html
@@ -6,7 +6,7 @@
 		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
 		
-		<title>快装不下油了！全球原油储存空间将三个月内用尽  </title> <!-- 浏览器标题 -->
+		<title>TBS LIVE  </title> <!-- 浏览器标题 -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 				<!-- Main。-->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">快装不下油了！全球原油储存空间将三个月内用尽 </h1>
+							<h1 class="major">TBS LIVE</h1>
 							<iframe width="853" height="480" src="//ok.ru/videoembed/1819719769815" frameborder="0" allow="autoplay" allowfullscreen></iframe>
 							  
 						
