--- a/Video-area.html
+++ b/Video-area.html
@@ -36,6 +36,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">视频区</h1>
+							  <li><a href="hv2" class="button">TBS LIVE </a></li>
 							   <li><a href="hv1" class="button">世卫组织：现有证据表明新冠病毒源自动物 蝙蝠最有可能是自然界贮主</a></li>
 							
 						<!--	<p>.</p>
