--- a/hv2.html
+++ b/hv2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--    2020.5.24  建立此网页   ps:如果看不到，那就需要サイエンスサーフィンインターネット                                                             	
+<!--    2020.5.24  建立此网页   ps:如果看不到，那就需要KXSW FQ                                                             	
 -->
 <html>
 	<head>    
@@ -35,7 +35,7 @@
 				<!-- Main。-->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">TBS LIVE (NEED サイエンスサーフィンインターネット)</h1>
+							<h1 class="major">TBS LIVE (NEED FQ)</h1>
 							<iframe width="853" height="480" src="//ok.ru/videoembed/1819719769815" frameborder="0" allow="autoplay" allowfullscreen></iframe>
 							  
 						
