--- a/a4.html
+++ b/a4.html
@@ -60,6 +60,9 @@
 				<div class="inner">
 					<ul class="menu">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://liuhouzhi0809.github.io">liuhouzhi0809</a></li>
+						<!--网站数据统计-->
+                                                <script async="" src="busuanzi.pure.mini.js"></script>
+
 					</ul>
 				</div>
 			</footer>
