--- a/Video-area.html
+++ b/Video-area.html
@@ -51,6 +51,17 @@
 				<div class="inner">
 					<ul class="menu">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://liuhouzhi0809.github.io">liuhouzhi0809</a></li>
+							<!--网站数据统计-->
+						 </iframe>
+                    <br>
+                    <span id="busuanzi_container_site_pv">
+                        本站总访问量<span id="busuanzi_value_site_pv"></span>次，
+                    </span>
+                    <span id="busuanzi_container_site_uv">
+                        本站访客数<span id="busuanzi_value_site_uv"></span>人次
+                    </span>
+                                                <script async="" src="busuanzi.pure.mini.js"></script>
+
 					</ul>
 				</div>
 			</footer>
