--- a/hv3.html
+++ b/hv3.html
@@ -36,7 +36,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">test</h1>
-			<iframe src="//player.bilibili.com/player.html?aid=93605953&bvid=BV1tE411s7Mh&cid=159815047&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>			
+			<iframe src="//player.bilibili.com/player.html?aid=93605953&bvid=BV1tE411s7Mh&cid=159815047&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" width="640" height="430"  allowfullscreen="true"> </iframe>			
 						<!--   	<p>.</p>
 							<p>.</p>       -->
 						</div>
