--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">文章区</h1>
-              <li><a href="test1" class="button">一个页面</a></li>
+                                                <li><a href="test1.htm" class="button">一个页面</a></li>
 	                                             
 							 <li><a href="test2" class="button">下雪效果的测试</a></li>
 							
