--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>音乐区</h2>
-									<p>随机播放二次元音乐</p>
+									<p>随机播放ACG音乐</p>
 									<ul class="actions">
 										<li><a href="Random_music.htm" class="button">播放</a></li>
 									</ul>
@@ -201,7 +201,7 @@
 
 			</div>   
                                                  -->
-	<!-- 雪花 -->					
+				
 	
  
 
