--- a/cn/index_cn.html
+++ b/cn/index_cn.html
@@ -29,12 +29,12 @@
 <html>
 	<head>
 		<!--icon -->
-		<link rel="shortcut icon" href="favicon.ico.png" >
+		<link rel="shortcut icon" href="https://liuhouzhi0809.github.io/favicon.ico.png" >
 		
 		<title>Liuhouzhi's Blog（测试用）</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="https://liuhouzhi0809.github.io/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -76,7 +76,7 @@
 		<!-- one -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>文章区</h2>
@@ -89,7 +89,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>音乐区</h2>
@@ -101,7 +101,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>资源区</h2>
@@ -113,7 +113,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>视频区</h2>
@@ -125,7 +125,7 @@
 							</div>
 			                    </section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>留言区</h2>
@@ -218,20 +218,20 @@
                     <span id="busuanzi_container_site_uv">
                         本站访客数<span id="busuanzi_value_site_uv"></span>人次
                     </span>
-                                                <script async="" src="busuanzi.pure.mini.js"></script>
+                                                <script async="" src="https://liuhouzhi0809.github.io/busuanzi.pure.mini.js"></script>
 
 					</ul>
 				</div>
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="https://liuhouzhi0809.github.io/assets/js/jquery.min.js"></script>
+			<script src="https://liuhouzhi0809.github.io/assets/js/jquery.scrollex.min.js"></script>
+			<script src="https://liuhouzhi0809.github.io/assets/js/jquery.scrolly.min.js"></script>
+			<script src="https://liuhouzhi0809.github.io/assets/js/browser.min.js"></script>
+			<script src="https://liuhouzhi0809.github.io/assets/js/breakpoints.min.js"></script>
+			<script src="https://liuhouzhi0809.github.io/assets/js/util.js"></script>
+			<script src="https://liuhouzhi0809.github.io/assets/js/main.js"></script>
 		
 		
 		<link rel="icon" href="./images/favicon.ico" type="favicon.icox-icon" />
