--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
 		
-		<title>资源区-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
+		<title>请选择您的语言 -liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,6 +28,21 @@
 					</ul>
 				</nav>
 			</header>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main。-->
+					<section id="main" class="wrapper">
+						<div class="inner">
+							<h1 class="major">请选择您的语言</h1>
+							  <li><a href="https://liuhouzhi0809.github.io/cn/index_cn.html" class="button">中文/a></li>
+							  <li><a href="https://liuhouzhi0809.github.io/cn/index_cn.html" 
+						
+						</div>
+					</section>
+
+			</div>
 
 		<!-- Footer -->
 			<footer id="footer" class="wrapper alt">
