--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<!--    2020.4.12                                                                        	
+<!--    2020.4.23                                                                        	
 -->
 <html>
 	<head>    
 		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
 		
-		<title>请选择您的语言-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
+		<title>资源区-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,8 +35,8 @@
 				<!-- Main。-->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">请选择您的语言</h1>
-							  <li><a href="https://liuhouzhi0809.github.io/cn/index_cn.html" class="button">中文/a></li>
+							<h1 class="major">资源区</h1>
+							  <li><a href="zy1.html" class="button">刀剑神域第二季BD1080P百度云/a></li>
 							
 						
 						</div>
@@ -74,3 +74,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+</html>
