--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">请选择您的语言 →</a>   <!--总标题 -->
+				<a href="index.html" class="title">请在右侧选择您的语言 →</a>   <!--总标题 -->
 				<nav>
 					<ul>
 						<li><a href="https://liuhouzhi0809.github.io/cn/index_cn.html">中文</a></li>                            <!-- 此处添加顶部栏 -->
