--- a/jp/Resource-area.html
+++ b/jp/Resource-area.html
@@ -36,7 +36,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">资源区</h1>
-							  <li><a href="zy1.html" class="button">刀剑神域第二季BD1080P百度云/a></li>
+							  <li><a href="zy1.html" class="button">刀剑神域第二季BD1080P百度云</a></li>
 							
 						
 						</div>
