--- a/en/index_en.html
+++ b/en/index_en.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<!-- 2020.4.19 建立此网页
-           莫生气                                （这是一个正在测试的网站）                                                 
+<!-- 2020.4.19 Create this page
+         Don't get angry                               （This is a website being tested）                                                 
 人生就像一场戏，今世有缘才相聚。
 相处一处不容易，人人应该去珍惜。
 世上万物般般有，哪能件件如我意。
@@ -31,7 +31,7 @@
 		<!--icon -->
 		<link rel="shortcut icon" href="https://liuhouzhi0809.github.io/favicon.ico.png" >
 		
-		<title>Liuhouzhi's Blog（测试用）</title>
+		<title>Liuhouzhi's blog (for testing)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://liuhouzhi0809.github.io/assets/css/main.css" />
@@ -44,8 +44,8 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">欢迎</a></li>
-							<li><a href="#one">内容</a></li>
+							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#one">content</a></li>
 							<!--<li><a href="#two">取得联系</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
@@ -63,7 +63,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
-							<p>这是用来测试的网站...</p>
+							<p>This is the website for testing...</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">了解更多</a></li>
 							</ul>
@@ -79,8 +79,8 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>文章区</h2>
-									<p>各种内容</p>
+									<h2>Article area</h2>
+									<p>Various contents</p>
 									<ul class="actions">
 										<li><a href="Article-area" class="button">前往</a></li>
 										
@@ -92,10 +92,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>音乐区</h2>
-									<p>随机播放ACG音乐</p>
+									<h2>Music area</h2>
+									<p>Random play of ACG music</p>
 									<ul class="actions">
-										<li><a href="Random_music.htm" class="button">播放</a></li>
+										<li><a href="Random_music.htm" class="button">play</a></li>
 									</ul>
 								</div>
 							</div>
@@ -104,10 +104,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>资源区</h2>
-									<p>有很多资源可以下载（当然现在还没有）</p>
+									<h2>Resource area</h2>
+									<p>There are a lot of resources to download (not yet)</p>
 									<ul class="actions">
-										<li><a href="Resource-area" class="button">前往</a></li>
+										<li><a href="Resource-area" class="button">go to</a></li>
 									</ul>
 								</div>
 							</div>
@@ -116,10 +116,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>视频区</h2>
-									<p>测试视频播放功能.</p>
+									<h2>Video area</h2>
+									<p>Test video playback function.</p>
 									<ul class="actions">
-										<li><a href="Video-area" class="button">前往</a></li>
+										<li><a href="Video-area" class="button">go to</a></li>
 									</ul>
 								</div>
 							</div>
@@ -128,10 +128,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>留言区</h2>
-									<p>测试留言功能（虽然有点丑，但是能用）.</p>
+									<h2>Message area</h2>
+									<p>Test the message function (it's ugly, but it works).</p>
 									<ul class="actions">
-										<li><a href="message" class="button">前往</a></li>
+										<li><a href="message" class="button">go to</a></li>
 									</ul>
 								</div>
 							</div>
