--- a/en/index_en.html
+++ b/en/index_en.html
@@ -213,10 +213,10 @@
 						 </iframe>
                     <br>
                     <span id="busuanzi_container_site_pv">
-                        本站总访问量<span id="busuanzi_value_site_pv"></span>次，
+                        Total visits<span id="busuanzi_value_site_pv"></span>，
                     </span>
                     <span id="busuanzi_container_site_uv">
-                        本站访客数<span id="busuanzi_value_site_uv"></span>人次
+                        Number of visitors<span id="busuanzi_value_site_uv"></span>.
                     </span>
                                                 <script async="" src="https://liuhouzhi0809.github.io/busuanzi.pure.mini.js"></script>
 
