--- a/en/index_en.html
+++ b/en/index_en.html
@@ -65,7 +65,7 @@
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
 							<p>This is the website for testing...</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">了解更多</a></li>
+								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
@@ -82,7 +82,7 @@
 									<h2>Article area</h2>
 									<p>Various contents</p>
 									<ul class="actions">
-										<li><a href="Article-area" class="button">前往</a></li>
+										<li><a href="Article-area" class="button">Go to</a></li>
 										
 									</ul>
 								</div>
@@ -107,7 +107,7 @@
 									<h2>Resource area</h2>
 									<p>There are a lot of resources to download (not yet)</p>
 									<ul class="actions">
-										<li><a href="Resource-area" class="button">go to</a></li>
+										<li><a href="Resource-area" class="button">Go to</a></li>
 									</ul>
 								</div>
 							</div>
@@ -119,7 +119,7 @@
 									<h2>Video area</h2>
 									<p>Test video playback function.</p>
 									<ul class="actions">
-										<li><a href="Video-area" class="button">go to</a></li>
+										<li><a href="Video-area" class="button">Go to</a></li>
 									</ul>
 								</div>
 							</div>
@@ -131,7 +131,7 @@
 									<h2>Message area</h2>
 									<p>Test the message function (it's ugly, but it works).</p>
 									<ul class="actions">
-										<li><a href="message" class="button">go to</a></li>
+										<li><a href="message" class="button">Go to</a></li>
 									</ul>
 								</div>
 							</div>
