--- a/en/Random_music.htm
+++ b/en/Random_music.htm
@@ -2,7 +2,7 @@
 <!-- 本网页建立于2020.5.21-->
 <!-- saved from url=(0073)https://jxiaoc.github.io/animeMusic/demo.html?id=5b8530e9b02de202d2f97b1a -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>随机播放二次元歌曲</title>
+    <title>Random play of ACG songs</title>
     <link rel="stylesheet" href="./Random_music/anime_music_icon.css">
     <link rel="stylesheet" href="./Random_music/demo.css">
 </head>
@@ -18,7 +18,7 @@
     <div class="progress">
         <div class="now"></div>
     </div>
-    <div class="name"> ↑点击按钮开始播放</div>
+    <div class="name"> ↑Click the button to start playing</div>
 </div>
 
 <script type="text/javascript" src="./Random_music/anime-music.js"></script>
