--- a/en/Article-area.html
+++ b/en/Article-area.html
@@ -42,11 +42,11 @@
 							 <p>4月27日</p>
 							<li><a href="a3" class="button">Solution of MAC mobile hard disk not being read due to incorrect disconnection</a></li>
 							<li><a href="a4" class="button">How to embed Netease cloud music player in web page</a></li>
-							<p>新闻：<p>
+							<p>News：<p>
 							<p>4月28日</p>
 							 <li><a href="a5" class="button">The number of Internet users in China has exceeded 900 million, and the scale of online entertainment users has increased significantly</a></li>
 							 <p>4月27日</p>
-							 <li><a href="a1" class="button">全球原油储存空间将在三个月内用完</a></li>
+							 <li><a href="a1" class="button">Global crude oil storage space will run out in three months</a></li>
 							<li><a href="a2" class="button">Continuing to resent "Fake news," trump said he was the most diligent president in history, and the briefing was not worth it</a></li>
 							
 							 
