--- a/en/Article-area.html
+++ b/en/Article-area.html
@@ -39,13 +39,13 @@
 							<p>Some things：<p>
 	                                                <li><a href="diary" class="button">Diary</a></li>
 							 <li><a href="a6" class="button">Map of epidemic situation in China</a></li>
-							 <p>4月27日</p>
+							 <p>April 27, 2020</p>
 							<li><a href="a3" class="button">Solution of MAC mobile hard disk not being read due to incorrect disconnection</a></li>
 							<li><a href="a4" class="button">How to embed Netease cloud music player in web page</a></li>
 							<p>News：<p>
-							<p>4月28日</p>
+							<p>April 28, 2020</p>
 							 <li><a href="a5" class="button">The number of Internet users in China has exceeded 900 million, and the scale of online entertainment users has increased significantly</a></li>
-							 <p>4月27日</p>
+							 <p>April 27, 2020</p>
 							 <li><a href="a1" class="button">Global crude oil storage space will run out in three months</a></li>
 							<li><a href="a2" class="button">Continuing to resent "Fake news," trump said he was the most diligent president in history, and the briefing was not worth it</a></li>
 							
