--- a/en/Article-area.html
+++ b/en/Article-area.html
@@ -22,7 +22,7 @@
 						<li><a href="index">Homepage</a></li>         
 						<li><a href="Article-area">Article area</a></li>
 						<li><a href="Video-area" class="active">Video area</a></li>
-						<li><a href="Resource-area">Resource-area</a></li>
+						<li><a href="Resource-area">Resource area</a></li>
 						 <li><a href="About">About</a></li>
 					
 					</ul>
@@ -64,10 +64,10 @@
 						 </iframe>
                     <br>
                     <span id="busuanzi_container_site_pv">
-                        Total visits<span id="busuanzi_value_site_pv"></span>，
+                        Total visits <span id="busuanzi_value_site_pv"></span>，
                     </span>
                     <span id="busuanzi_container_site_uv">
-                       Number of visitors<span id="busuanzi_value_site_uv"></span>.
+                       Number of visitors <span id="busuanzi_value_site_uv"></span>.
                     </span>
                                                 <script async="" src="busuanzi.pure.mini.js"></script>
 
