--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">请选择您的语言 Please select your language 言語を選択してください。 </a>   <!--总标题 -->
+				<a href="index.html" class="title">请选择您的语言;Please select your language;言語を選択してください。 </a>   <!--总标题 -->
 				<nav>
 					<ul>
 						<li><a href="https://liuhouzhi0809.github.io/cn/index_cn.html">中文</a></li>
@@ -32,7 +32,7 @@
 				<!-- Main。-->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">请选择您的语言 Please select your language 言語を選択してください。</h1>
+							<h1 class="major">请选择您的语言;Please select your language;言語を選択してください。</h1>
 							
 	                                                <li><a href="https://liuhouzhi0809.github.io/cn/index_cn.html" class="button">中文</a></li>
 							<li><a href="https://liuhouzhi0809.github.io/en/index_en.html" class="button">English</a></li>
