--- a/jp/index_jp.html
+++ b/jp/index_jp.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<!-- 2020.4.19 建立此网页
-           莫生气                                （这是一个正在测试的网站）                                                 
+<!-- 2020.4.19 このホームページを作成します
+          怒るな                                （これはテスト中のサイトです。）                                                 
 人生就像一场戏，今世有缘才相聚。
 相处一处不容易，人人应该去珍惜。
 世上万物般般有，哪能件件如我意。
@@ -44,7 +44,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">欢迎</a></li>
+							<li><a href="#intro">歓迎する</a></li>
 							<li><a href="#one">内容</a></li>
 							<!--<li><a href="#two">取得联系</a></li>  -->
 							<!-- <li><a href="#four">测试</a></li>  -->
@@ -63,9 +63,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Liuhouzhi's Blog</h1> <!--主页的第一句话--> 
-							<p>这是用来测试的网站...</p>
+							<p>これはテスト用のサイトです。...</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">了解更多</a></li>
+								<li><a href="#one" class="button scrolly">もっと知りたい</a></li>
 							</ul>
 						</div>
 					</section>
@@ -79,10 +79,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>文章区</h2>
-									<p>各种内容</p>
+									<h2>文章のコーナー</h2>
+									<p>各種の内容</p>
 									<ul class="actions">
-										<li><a href="Article-area" class="button">前往</a></li>
+										<li><a href="Article-area" class="button">入り</a></li>
 										
 									</ul>
 								</div>
@@ -92,10 +92,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>音乐区</h2>
-									<p>随机播放ACG音乐</p>
+									<h2>音楽のコーナー</h2>
+									<p>ACG音楽をランダムに再生</p>
 									<ul class="actions">
-										<li><a href="Random_music.htm" class="button">播放</a></li>
+										<li><a href="Random_music.htm" class="button">再生</a></li>
 									</ul>
 								</div>
 							</div>
@@ -104,10 +104,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>资源区</h2>
-									<p>有很多资源可以下载（当然现在还没有）</p>
+									<h2>リソースエリア</h2>
+									<p>ダウンロードできるリソースがたくさんあります。</p>
 									<ul class="actions">
-										<li><a href="Resource-area" class="button">前往</a></li>
+										<li><a href="Resource-area" class="button">入り</a></li>
 									</ul>
 								</div>
 							</div>
@@ -116,10 +116,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>视频区</h2>
-									<p>测试视频播放功能.</p>
+									<h2>動画のコーナー</h2>
+									<p>ビデオ再生機能をテストします。.</p>
 									<ul class="actions">
-										<li><a href="Video-area" class="button">前往</a></li>
+										<li><a href="Video-area" class="button">入り</a></li>
 									</ul>
 								</div>
 							</div>
@@ -128,10 +128,10 @@
 							<a href="#" class="image"><img src="https://liuhouzhi0809.github.io/images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>留言区</h2>
-									<p>测试留言功能（虽然有点丑，但是能用）.</p>
+									<h2>伝言コーナー</h2>
+									<p>伝言機能をテストします（ちょっと丑いですが、使えます）.</p>
 									<ul class="actions">
-										<li><a href="message" class="button">前往</a></li>
+										<li><a href="message" class="button">入り</a></li>
 									</ul>
 								</div>
 							</div>
@@ -213,10 +213,10 @@
 						 </iframe>
                     <br>
                     <span id="busuanzi_container_site_pv">
-                        本站总访问量<span id="busuanzi_value_site_pv"></span>次，
+                        当駅総アクセス量<span id="busuanzi_value_site_pv"></span>，
                     </span>
                     <span id="busuanzi_container_site_uv">
-                        本站访客数<span id="busuanzi_value_site_uv"></span>人次
+                        当駅の訪問者数<span id="busuanzi_value_site_uv"></span>
                     </span>
                                                 <script async="" src="https://liuhouzhi0809.github.io/busuanzi.pure.mini.js"></script>
 
