--- a/jp/index_jp.html
+++ b/jp/index_jp.html
@@ -31,7 +31,7 @@
 		<!--icon -->
 		<link rel="shortcut icon" href="https://liuhouzhi0809.github.io/favicon.ico.png" >
 		
-		<title>Liuhouzhi's Blog（测试用）</title>
+		<title>Liuhouzhi's Blog（テスト用）</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="https://liuhouzhi0809.github.io/assets/css/main.css" />
