--- a/en/index_en.html
+++ b/en/index_en.html
@@ -105,7 +105,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Resource area</h2>
-									<p>There are a lot of resources to download (not yet)</p>
+									<p>There are a lot of resources to download </p>
 									<ul class="actions">
 										<li><a href="Resource-area" class="button">Go to</a></li>
 									</ul>
