--- a/cn/index_cn.html
+++ b/cn/index_cn.html
@@ -105,7 +105,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>资源区</h2>
-									<p>有很多资源可以下载（当然现在还没有）</p>
+									<p>有很多资源可以下载</p>
 									<ul class="actions">
 										<li><a href="Resource-area" class="button">前往</a></li>
 									</ul>
