--- a/cn/Article-area.html
+++ b/cn/Article-area.html
@@ -40,7 +40,7 @@
 	                                                <li><a href="diary" class="button">日记</a></li>
 							 <li><a href="a6" class="button">中国疫情地图</a></li>
 							 <p>4月27日</p>
-							<li><a href="a3" class="button">Mac移动硬盘不正确断开连接导致无法读取加载的解决方法</a></li>
+							<li><a href="a3" class="button">Mac移动硬盘不正确断开连接导致无法读取的解决方法</a></li>
 							<li><a href="a4" class="button">如何在网页中嵌入网易云音乐播放器</a></li>
 							<p>新闻：<p>
 							<p>4月28日</p>
