--- a/en/Video-area.html
+++ b/en/Video-area.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<!--   建立于 2020.4.24 8:40                                                                         	
+<!--   建立于 2020.4.24 8:40  翻译时间 2020.7.25                                                                       	
 -->
 <html>
 	<head>    
 		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
 		
-		<title>视频区-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
+		<title>Video-area-liuhouzhi‘s blog  </title> <!-- 浏览器标题 -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,10 +20,10 @@
 				<nav>
 					<ul>
 						<li><a href="index">主页</a></li>                            <!-- 此处添加顶部栏 -->
-						<li><a href="Article-area" class="active">文章区</a></li>
-                                                <li><a href="Video-area" class="active">视频区</a></li>
-						<li><a href="Resource-area">资源区</a></li>
-						<li><a href="About">关于</a></li>
+						<li><a href="Article-area" class="active">Article area</a></li>
+                                                <li><a href="Video-area" class="active">Video area</a></li>
+						<li><a href="Resource-area"></a>Resource area</li>
+						<li><a href="About">About</a></li>
 					
 					</ul>
 				</nav>
@@ -35,9 +35,9 @@
 				<!-- Main。-->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">视频区</h1>
+							<h1 class="major">Video area</h1>
 							  <li><a href="hv2" class="button">TBS LIVE </a></li>
-							   <li><a href="hv1" class="button">世卫组织：现有证据表明新冠病毒源自动物 蝙蝠最有可能是自然界贮主</a></li>
+							   <li><a href="hv1" class="button">WHO: available evidence suggests that the new coronavirus originated from animal bats and is most likely to be a natural reservoir</a></li>
 							
 						<!--	<p>.</p>
 							<p>.</p>       -->
@@ -55,10 +55,10 @@
 						 </iframe>
                     <br>
                     <span id="busuanzi_container_site_pv">
-                        本站总访问量<span id="busuanzi_value_site_pv"></span>次，
+                        Total visits<span id="busuanzi_value_site_pv"></span>,
                     </span>
                     <span id="busuanzi_container_site_uv">
-                        本站访客数<span id="busuanzi_value_site_uv"></span>人次
+                      Number of visitors<span id="busuanzi_value_site_uv"></span>.
                     </span>
                                                 <script async="" src="busuanzi.pure.mini.js"></script>
 
