--- a/en/Video-area.html
+++ b/en/Video-area.html
@@ -19,7 +19,7 @@
 				<a href="index.html" class="title">Liuhouzhi's Blog</a>   <!--总标题 -->
 				<nav>
 					<ul>
-						<li><a href="index">主页</a></li>                            <!-- 此处添加顶部栏 -->
+						<li><a href="https://liuhouzhi0809.github.io/en/index_en.html">Homepage</a></li>                            <!-- 此处添加顶部栏 -->
 						<li><a href="Article-area" class="active">Article area</a></li>
                                                 <li><a href="Video-area" class="active">Video area</a></li>
 						<li><a href="Resource-area"></a>Resource area</li>
