--- a/en/Article-area.html
+++ b/en/Article-area.html
@@ -19,7 +19,7 @@
 				<a href="index.html" class="title">Liuhouzhi's Blog</a>   <!--总标题 -->
 				<nav>
 					<ul>
-						<li><a href="index">Homepage</a></li>         
+						<li><a href="https://liuhouzhi0809.github.io/en/index_en.html">Homepage</a></li>         
 						<li><a href="Article-area">Article area</a></li>
 						<li><a href="Video-area" class="active">Video area</a></li>
 						<li><a href="Resource-area">Resource area</a></li>
