--- a/en/404.html
+++ b/en/404.html
@@ -34,7 +34,7 @@
                 <p class="zoom-area para">Sorry, the page is missing, please return to the home page or contact us </p>
  
                 <div class="link-container">
-                    <a href="liuhouzhi0809.github.io/en/index_en.html" class="more-link">Back to home page</a>
+                    <a href="liuhouzhi0809.github.io/" class="more-link">Back to home page</a>
                     
                 </div>
             </div>
