--- a/jp/404.html
+++ b/jp/404.html
@@ -31,10 +31,10 @@
                     <span><span>4</span></span>
                 </section>
                 <h1>Page Not Found</h1>
-                <p class="zoom-area para">对不起，页面丢失了，请返回首页或者联系我们哦 </p>
+                <p class="zoom-area para">すみません、ページがなくなってしまいました。トップページに戻ったら連絡してください。 </p>
  
                 <div class="link-container">
-                    <a href="liuhouzhi0809.github.io/" class="more-link">返回首页</a>
+                    <a href="liuhouzhi0809.github.io/" class="more-link">最初のページに戻ります</a>
                     
                 </div>
             </div>
