--- a/en/message.html
+++ b/en/message.html
@@ -1,8 +1,8 @@
  <form action="https://formspree.io/1461692615@qq.com" method="post">
-                    <input type="text" placeholder="您的姓名" name="name">
-                    <input type="email" placeholder="您的邮箱" name="eamil">
-                    <textarea name="message" id="doc-vld-ta-2-1" minlength="10"  placeholder="请输入您的留言"></textarea>
+                    <input type="text" placeholder="Your name" name="name">
+                    <input type="email" placeholder="Your email" name="eamil">
+                    <textarea name="message" id="doc-vld-ta-2-1" minlength="10"  placeholder="Please enter your message"></textarea>
                     <div class="banner_btn pa">
-                        <button style="line-height: 41px;" type="submit">发送信息</button>
+                        <button style="line-height: 41px;" type="submit">Send message</button>
                     </div>
    </form>
