--- a/en/a2.html
+++ b/en/a2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--    2020.4.27  建立此网页                                                                        	
+<!--    2020.4.27  建立此网页     翻译时间 2020.7.25                                                                   	
 -->
 <html>
 	<head>    
