--- a/jp/About.html
+++ b/jp/About.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--    2020.4.23 建立此网页                                                                                         	
+<!--    2020.4.23 このページを作成                                                                                      	
 -->
 <html>
 	<head>    
@@ -38,11 +38,9 @@
 				<!-- Main。-->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">关于</h1>
+							<h1 class="major">オン</h1>
 							                               <!-- 文字-->
-							<p> LiuHouzhi0809‘s Blog<p>
-                                                       <p>I really appreciate the template provided by this website <li><a href="https://html5up.net/" class="button">html5up</a></li> <p>
-                                                       <p> Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)<p>
+							
                                                         <p> LiuHouzhi0809のブログ <p>
                                                     
                                                        <p> 这静的なウェブサイトです<p>
