--- a/jp/About.html
+++ b/jp/About.html
@@ -23,7 +23,7 @@
 				<a href="index.html" class="title">Liuhouzhi's Blog</a>   <!--总标题 -->
 				<nav>
 					<ul>
-						<li><a href="index">ホームページ</a></li>         
+						<li><a href="index_jp.html">ホームページ</a></li>         
 						<li><a href="Article-area">記事エリア</a></li>
 						<li><a href="Video-area" class="active">ビデオエリア</a></li>
 						<li><a href="Resource-area">リソースエリア</a></li>
