--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<!--icon -->
 		<link rel="shortcut icon" href="favicon.ico.png" >
 		
-		<title>LiHouzhi‘s blog-请选择您的语言-  </title> <!-- 浏览器标题 -->
+		<title>LiuHouzhi‘s blog-请选择您的语言-  </title> <!-- 浏览器标题 -->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
